# Lab3_2

./: CMakeLists.txt  main.c
Librerie/: CMakeLists.txt  libreria_principale.c  libreria_principale.h
